opam-version: "2.0"
version: "1.0"
maintainer: "bob@sponge.com"
authors: ["SpongeBob"]
homepage: "https://github.com/kgraney/cryptopals"
bug-reports: "https://github.com/kgraney/cryptopals/issues"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "bitvec"
  "core"
  "dune"
  "ppx"
  "ppx_jane"
]